--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:windowSoftInputMode="adjustPan"
         android:background="@color/colorBlue"
         android:layout_height="match_parent">
 
@@ -13,9 +14,9 @@
             android:layout_marginTop="20dp"
             android:background="#F7F7F7"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="@+id/textView4"
-            app:layout_constraintStart_toStartOf="@+id/textView4"
-            app:layout_constraintTop_toBottomOf="@+id/textView4">
+            app:layout_constraintEnd_toEndOf="@+id/changeprofiletv"
+            app:layout_constraintStart_toStartOf="@+id/changeprofiletv"
+            app:layout_constraintTop_toBottomOf="@+id/changeprofiletv">
 
 
             <TextView
@@ -39,6 +40,7 @@
                 android:layout_marginTop="10dp"
                 android:background="@drawable/bg_login_button"
                 android:text="Done"
+                android:visibility="gone"
                 android:textColor="@color/colorWhite"
                 android:textSize="14sp"
                 android:fontFamily="@font/montserrat_medium"
@@ -84,7 +86,35 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
+                        android:visibility="visible"
                         android:layout_marginEnd="20dp"
+
+                        android:textSize="16sp"
+                        android:fontFamily="@font/montserrat_medium"
+                        app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/iv_profile"
+                        app:layout_constraintTop_toTopOf="@+id/iv_profile" />
+
+                    <View
+                        android:id="@+id/view11"
+                        android:layout_width="0dp"
+                        android:layout_height="1dp"
+                        android:visibility="visible"
+                        android:background="@color/color_gray_line"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/viewUserName"
+                        app:layout_constraintTop_toBottomOf="@+id/viewUserName" />
+
+                    <EditText
+                        android:id="@+id/viewUserNameEditText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="10dp"
+                        android:layout_marginEnd="20dp"
+                        android:visibility="gone"
+                        android:background="@android:color/transparent"
                         android:textSize="16sp"
                         android:fontFamily="@font/montserrat_medium"
                         app:layout_constraintBottom_toBottomOf="@+id/iv_profile"
@@ -93,15 +123,18 @@
                         app:layout_constraintTop_toTopOf="@+id/iv_profile" />
 
 
+
+
                     <View
-                        android:id="@+id/view11"
+                        android:id="@+id/view1111"
                         android:layout_width="0dp"
                         android:layout_height="1dp"
+                        android:visibility="gone"
                         android:background="@color/color_gray_line"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="@+id/viewUserName"
-                        app:layout_constraintTop_toBottomOf="@+id/viewUserName" />
+                        app:layout_constraintStart_toStartOf="@+id/viewUserNameEditText"
+                        app:layout_constraintTop_toBottomOf="@+id/viewUserNameEditText" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -149,6 +182,9 @@
                         app:layout_constraintStart_toStartOf="@+id/tv_userid"
                         app:layout_constraintTop_toBottomOf="@+id/tv_userid" />
 
+
+
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -177,6 +213,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="25dp"
                         android:layout_marginEnd="20dp"
+                        android:visibility="visible"
                         android:layout_marginBottom="8dp"
                         android:textSize="14sp"
                         android:fontFamily="@font/montserrat_medium"
@@ -185,6 +222,30 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toEndOf="@+id/iv_email"
                         app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+                    <EditText
+                        android:id="@+id/emailEditText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginEnd="20dp"
+                        android:visibility="gone"
+                        android:background="@android:color/transparent"
+                        android:layout_marginBottom="8dp"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/montserrat_medium"
+                        android:hint="Ex:user@tanakata.com"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/iv_email"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
 
                     <View
                         android:id="@+id/view13"
@@ -195,6 +256,19 @@
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="@+id/tv_email"
                         app:layout_constraintTop_toBottomOf="@+id/tv_email" />
+
+
+
+                    <View
+                        android:id="@+id/view1313"
+                        android:layout_width="0dp"
+                        android:visibility="gone"
+                        android:layout_height="1dp"
+                        android:background="@color/color_gray_line"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="@+id/emailEditText"
+                        app:layout_constraintTop_toBottomOf="@+id/emailEditText" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -232,8 +306,47 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
 
+
+
+
+                    <EditText
+                        android:id="@+id/mobileEditText"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="25dp"
+                        android:layout_marginEnd="20dp"
+                        android:background="@android:color/transparent"
+                        android:visibility="gone"
+                        android:layout_marginBottom="8dp"
+                        android:textSize="14sp"
+                        android:fontFamily="@font/montserrat_medium"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toEndOf="@+id/iv_mobile"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <Button
+                android:id="@+id/editButtonn"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/bg_login_button"
+                android:text="EDIT"
+                android:visibility="visible"
+                android:textColor="@color/colorWhite"
+                android:textSize="14sp"
+                android:fontFamily="@font/montserrat_medium"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+                app:layout_constraintStart_toStartOf="@+id/linearLayout2"
+                app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
 
 
@@ -243,15 +356,15 @@
 
         <ImageView
             android:id="@+id/profile_image"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_80"
             android:src="@drawable/avator_profile"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/changeprofiletv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
