--- a/app/src/main/res/layout/activity_register_new_business_1.xml
+++ b/app/src/main/res/layout/activity_register_new_business_1.xml
@@ -34,7 +34,7 @@
                     android:layout_marginTop="20dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/progressBar1">>
+                    app:layout_constraintTop_toBottomOf="@+id/progressBar1">
 
                     <EditText
                         android:id="@+id/et_businessname"
