--- a/app/src/main/res/layout/activity_register_new_business_2.xml
+++ b/app/src/main/res/layout/activity_register_new_business_2.xml
@@ -73,6 +73,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="100dp"
                     android:layout_marginTop="20dp"
+                    android:hint="Enter Comments here"
                     android:background="@drawable/roundbox"
                     android:ems="10"
                     android:fontFamily="@font/montserrat_regular"
@@ -106,10 +107,10 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/et_layoutbusinessname"
-                    android:layout_width="match_parent"
-                    android:layout_height="60dp"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="20dp"
-                    app:layout_constraintEnd_toEndOf="@+id/spinnergender"
+                    app:layout_constraintEnd_toStartOf="@+id/imageView11"
                     app:layout_constraintStart_toStartOf="@+id/spinnergender"
                     app:layout_constraintTop_toBottomOf="@+id/spinnergender">
 
@@ -134,6 +135,16 @@
                     app:layout_constraintEnd_toEndOf="@+id/et_layoutbusinessname"
                     app:layout_constraintStart_toStartOf="@+id/et_layoutbusinessname"
                     app:layout_constraintTop_toBottomOf="@+id/et_layoutbusinessname" />
+
+                <ImageView
+                    android:id="@+id/imageView11"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:padding="@dimen/dp_5"
+                    app:layout_constraintBottom_toBottomOf="@+id/et_layoutbusinessname"
+                    app:layout_constraintEnd_toEndOf="@+id/spinnergender"
+                    app:layout_constraintTop_toTopOf="@+id/et_layoutbusinessname"
+                    app:srcCompat="@drawable/location_icon" />
 
 
             </androidx.constraintlayout.widget.ConstraintLayout>
