--- a/app/src/main/res/layout/activity_register_new_business_1.xml
+++ b/app/src/main/res/layout/activity_register_new_business_1.xml
@@ -163,6 +163,7 @@
                         android:id="@+id/et_register"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:inputType="number"
                         android:fontFamily="@font/montserrat_regular"
                         android:hint="@string/registrationno"
                         android:textSize="@dimen/sp_14" />
