--- a/app/src/main/res/layout/activity_register_new_business_2.xml
+++ b/app/src/main/res/layout/activity_register_new_business_2.xml
@@ -132,7 +132,7 @@
                     android:entries="@array/corebusinessarray"
                     android:fontFamily="@font/montserrat_regular"
                     android:textSize="14sp"
-                    app:layout_constraintEnd_toEndOf="@+id/et_layoutbusinessname"
+                    app:layout_constraintEnd_toEndOf="@+id/imageView11"
                     app:layout_constraintStart_toStartOf="@+id/et_layoutbusinessname"
                     app:layout_constraintTop_toBottomOf="@+id/et_layoutbusinessname" />
 
