--- a/app/src/main/res/layout/fragment_business_details.xml
+++ b/app/src/main/res/layout/fragment_business_details.xml
@@ -41,7 +41,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="KES 8,000"
+                    android:text="KES 0"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp_11"
                     app:layout_constraintEnd_toEndOf="@+id/tv_head_average_sales"
@@ -133,7 +133,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:fontFamily="@font/pt_sans_regular"
-                    android:text="Cash sale 20%"
+                    android:text="Cash sale 0%"
                     android:textSize="@dimen/sp_12"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_color_green_sales"
                     app:layout_constraintEnd_toEndOf="@+id/tv_subtitle_sales"
@@ -156,7 +156,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:fontFamily="@font/pt_sans_regular"
-                    android:text="Credit Sale 80%"
+                    android:text="Credit Sale 0%"
                     android:textSize="@dimen/sp_12"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_color_red_sales"
                     app:layout_constraintEnd_toEndOf="@+id/tv_cash_sales"
@@ -200,7 +200,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="3dp"
                     android:fontFamily="@font/montserrat_regular"
-                    android:text="KES 8,000"
+                    android:text="KES 0"
                     android:textColor="@color/black"
                     android:textSize="@dimen/sp_11"
                     app:layout_constraintEnd_toEndOf="@+id/tv_head_average_purchase"
@@ -291,7 +291,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:fontFamily="@font/pt_sans_regular"
-                    android:text="Cash Purchase 20%"
+                    android:text="Cash Purchase 0%"
                     android:textSize="@dimen/sp_12"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_color_green_purchase"
                     app:layout_constraintEnd_toEndOf="@+id/tv_subtitle_purchase"
@@ -314,7 +314,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="5dp"
                     android:fontFamily="@font/pt_sans_regular"
-                    android:text="Credit Purchase 80%"
+                    android:text="Credit Purchase 0%"
                     android:textSize="@dimen/sp_12"
                     app:layout_constraintBottom_toBottomOf="@+id/tv_color_red_purchase"
                     app:layout_constraintEnd_toEndOf="@+id/tv_cash_purchase"
@@ -340,6 +340,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="wrap_content"
                 android:layout_gravity="left"
+                android:paddingRight="10dp"
                 android:layout_height="wrap_content">
 
                 <TextView
